JSX: Item input groups restructured. CSS: Input groups made uniform to fit Item, "Add" icon swaps to "Remove" icon when pressed (vice versa), Side Menu overlap issues resolved.

--- a/resources/sass/partials/_item.sass
+++ b/resources/sass/partials/_item.sass
@@ -4,7 +4,7 @@ $item-secondary: #53b582
 .item-group
   display: flex
   flex-flow: column nowrap
-  justify-content: space-between
+  justify-content: flex-start
   position: relative
   background-color: $item-secondary
   margin: 2px
@@ -20,18 +20,27 @@ $item-secondary: #53b582
   p
     padding: 10px 15px
 
-  .options-group
-    display: flex
-    flex-flow: column
-    position: absolute
-    place-self: center
-    justify-items: center
-    top: 5px
-    right: 10px
-    //transform: translate(0, -50%)
+.options-group
+  display: flex
+  flex-flow: column
+  position: absolute
+  place-self: center
+  justify-items: center
+  top: 5px
+  right: 10px
 
-    i
-      text-align: center
-      place-self: center
-      margin: 2px 2px
-      padding: 3px 3px
+  i
+    text-align: center
+    place-self: center
+    margin: 2px 2px
+    padding: 3px 3px
+
+.input-group
+  width: 100%
+
+  input
+    width: 100%
+    padding: 10px 15px
+
+  button
+    width: 100%
