--- a/resources/sass/partials/_section.sass
+++ b/resources/sass/partials/_section.sass
@@ -26,6 +26,12 @@
 .section-input-group
   display: flex
   flex-flow: column nowrap
-  place-self: center
-  align-items: center
+  align-self: center
   width: 80%
+
+  input
+    width: 100%
+    padding: 10px 15px
+
+  button
+    width: 100%
