--- a/resources/sass/style.sass
+++ b/resources/sass/style.sass
@@ -29,6 +29,7 @@ button
 .hide
   height: 0
   opacity: 0
+  width: 0 !important
   overflow: hidden
 
 #sections-wrapper
